# Telegram-signal-copier

./: .env.example  .gitattributes  .gitignore  AGENT_SPEC.md  CONTRIBUTING.md  README.md  SUPERVISOR.md  baseline.json  context.md  deployment_system_guide.md  graphify.cmd  launch_dashboard.py  pyproject.toml  requirements.txt  telegram-signal-copier.session-journal  vps_deployment_steps.md
.github/: copilot-instructions.md
TelegramSignalCopierBridge/: 9a058c41-eaa8-4475-a105-b99f43fa11fe.txt  command_queue.txt  e2e_verify_1781101399.txt  e2e_verify_1781101626.cmd  ea_status.txt  startup_health.txt  telegram_dialogs.json  telegram_sources.txt  telegram_status.txt
bridge/: 00da2bdc-92dd-4207-a14a-3d7e60440ba8.cmd  1210735e-515d-4769-9c53-c8c8cf92f4f9.cmd  42df7df7-5d12-4138-837d-fd1f47bf2f37.cmd  7005b400-f301-4914-bed3-3efa73551970.txt  a6085a25-1854-4e73-88e9-f7092c5c1c64.txt  a7c4485d-615b-4a94-b481-250b0b4d0ee5.txt  command_queue.txt  f2f23d87-5adc-4ec3-8268-7bcc2a249fb5.cmd  telegram_status.txt
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
logs/: bridge_health_2026-05-14.jsonl  workflow_supervisor_2026-05-14.jsonl
packaging/: TelegramSignalCopier.iss  TelegramSignalCopier.spec  build_windows_bundle.ps1  hook_tesseract_bundled.py
tests/: conftest.py  test_bridge_executor.py  test_bridge_monitor.py  test_config.py  test_gui_dialog.py  test_openai_client.py  test_pipeline.py  test_signal_parser.py  test_telegram_client.py
tools/: _debug_info_confidence.py  _do_restart.py  _find_conquer.py  _find_conquer_id.py  _find_fgmk.py  _find_new_groups.py  _find_new_groups2.py  _find_new_groups3.py  _find_new_groups4.py  _mt5_group_profits.py  _mt5_group_profits_3w.py  _mt5_group_profits_last_week_report.py  _pipeline_rr_analysis.py  _resolve_conquer.py  _slug_test.py  _verify_parser_fixes.py  analyze_last_300.py  analyze_recent_logs.py  analyze_rejected.py  analyze_signal_failures.py  ask.cmd  ask.ps1  bridge_autofix_daemon.py  bridge_monitor.py  check_imports.py  check_loaded_files.py  debug_mt5_parser.py  demo_run.py  (+69 more)
(+142 files in other folders)
